<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.example.loadapp.ui.customviews.DownloadIcon
            android:id="@+id/customIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/glideRadioButton"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glide"
                app:buttonTint="@color/crayola" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/loadAppRadioButton"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_15dp"
                android:text="@string/loadApp"
                app:buttonTint="@color/crayola" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/retrofitRadioButton"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrofit"
                app:buttonTint="@color/crayola" />

        </RadioGroup>

        <com.example.loadapp.ui.customviews.CustomButton
            android:id="@+id/downloadCustomButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            app:isEnabled="true"
            app:isDisabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>